# trail_detect_control_cpp

./: README.md  run.sh
cyber_msgs/: CMakeLists.txt
cyber_msgs/msg/: ButtonState.msg  MaterialBoxPose.msg  SpeedFeedbackAGV.msg  arm_action.msg  body_status_feedback.msg  speedcmd.msg  steercmd.msg
trail_control/: CMakeLists.txt  package.xml
trail_control/config/: control_params.yaml
trail_control/launch/: trail_control.launch
trail_control/src/: control.cpp
trail_detect/: CMakeLists.txt  package.xml
trail_detect/config/: detect_params.yaml
trail_detect/include/: tracker.h  util.h
trail_detect/launch/: trail_detect.launch
trail_detect/rviz/: trail.rviz
trail_detect/src/: ekf.cpp  main.cpp  optimizer.cpp  planning.cpp  tracker.cpp
trail_detect_control/: CMakeLists.txt  package.xml
trail_detect_control/config/: params.yaml
trail_detect_control/include/: ekf.h  tracker.h
trail_detect_control/launch/: trail_detect_control.launch
trail_detect_control/src/: ekf.cpp  main.cpp  optimizer.cpp  optimizer2.cpp  planning.cpp  rs_planning.cpp  tracker.cpp
yolov8_pose/: CMakeLists.txt  package.xml
yolov8_pose/include/: app_yolov8_pose.h  kernel_function.cu  kernel_function.h  utils.h  yolo.cpp  yolov8_pose.h
yolov8_pose/src/: app_yolov8_pose.cpp  decode_yolov8_pose.h  yolov8_pose.cpp
