<?xml version="1.0"?>
<package format="2">
  <name>trail_control</name>
  <version>0.0.0</version>
  <description>The trail_control package</description>

  <maintainer email="tong_yao@sjtu.edu.cn">tongyao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cyber_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cyber_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cyber_msgs</exec_depend>

  <export>
  </export>
</package>
